# digestible

./: CMakeLists.txt  README.md
.circleci/: config.yml
include/digestible/: digestible.h
tests/: CMakeLists.txt  tests.cpp
utility/: CMakeLists.txt  README.md  main.cpp
